Add readme. Bug lỗi còn sót